added semantics functionality that provides ontology file, jsonld context and ontology docs within the api
