# spec/0/openapi3_1.yaml
@@ -736,7 +736,60 @@ paths:
             application/x-yaml:
               schema:
                 $ref: 'json-schema/Entity.json'
-              
+  /semantics/ontology:
+    get:
+      tags:
+        - semantics
+      summary: Get the ERO ontology
+      description: desc
+      operationId: getOntology
+      responses:
+        '200':
+          description: successful operation
+          content:
+            text/html:
+              schema:
+                type: string
+            text/turtle:
+              schema:
+                type: string
+  /semantics/ontology/{concept}:
+    get:
+      tags:
+        - semantics
+      summary: Get the ontology or the concept docs
+      description: desc
+      operationId: getConcept
+      parameters:
+        - name: concept
+          in: path
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: successful operation
+          content:
+            text/html:
+              schema:
+                type: string
+            text/turtle:
+              schema:
+                type: string
+  /semantics/jsonld-context:
+    get:
+      tags:
+        - semantics
+      summary: Get the ERO ontology jsonld context
+      description: desc
+      operationId: getJsonldContext
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: string
 components:
   parameters:
     dataSourceId:
